[package]
name = "opensimp-rust-gui"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
trust-dns-resolver = "0.20.3"
fltk = "1.1.13"
fltk-theme = "0.1"
notify-rust = { version = "4", optional = true }
