[package]
name = "opensimp-rust-gui"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
notify-rust = { version = "4", optional = true }
trust-dns-resolver = "0.20.3"
fltk-theme = "0.1"
fltk = "1.1.13"
human-panic = "1.0.3"
rsa = "0.6.1"
rand = "0.8.5"
aes-gcm = "0.9.4"
faster-hex = "0.6.1"
